--- a/client/state-db/Cargo.toml
+++ b/client/state-db/Cargo.toml
@@ -18,5 +18,5 @@ log = "0.4.11"
 sc-client-api = { version = "4.0.0-dev", path = "../api" }
 sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
 codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
-axia-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
-axia-util-mem-derive = "0.1.0"
+parity-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
+parity-util-mem-derive = "0.1.0"
