--- a/frame/support/Cargo.toml
+++ b/frame/support/Cargo.toml
@@ -38,7 +38,7 @@ log = { version = "0.4.14", default-features = false }
 assert_matches = "1.3.0"
 pretty_assertions = "1.0.0"
 frame-system = { version = "4.0.0-dev", path = "../system" }
-axia-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
+parity-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
 
 [features]
 default = ["std"]
