--- a/primitives/runtime/Cargo.toml
+++ b/primitives/runtime/Cargo.toml
@@ -27,7 +27,7 @@ log = { version = "0.4.14", default-features = false }
 paste = "1.0"
 rand = { version = "0.7.2", optional = true }
 impl-trait-for-tuples = "0.2.1"
-axia-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
+parity-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
 hash256-std-hasher = { version = "0.15.2", default-features = false }
 either = { version = "1.5", default-features = false }
 
@@ -54,7 +54,7 @@ std = [
 	"sp-std/std",
 	"sp-io/std",
 	"serde",
-	"axia-util-mem/std",
+	"parity-util-mem/std",
 	"hash256-std-hasher/std",
 	"either/use_std",
 ]
