--- a/primitives/version/Cargo.toml
+++ b/primitives/version/Cargo.toml
@@ -22,7 +22,7 @@ scale-info = { version = "1.0", default-features = false, features = ["derive"] 
 sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
 sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../runtime" }
 sp-version-proc-macro = { version = "4.0.0-dev", default-features = false, path = "proc-macro" }
-axia-wasm = { version = "0.42.2", optional = true }
+parity-wasm = { version = "0.42.2", optional = true }
 thiserror = { version = "1.0.21", optional = true }
 
 [features]
@@ -34,6 +34,6 @@ std = [
 	"scale-info/std",
 	"sp-std/std",
 	"sp-runtime/std",
-	"axia-wasm",
+	"parity-wasm",
 	"thiserror",
 ]
